Components/SimonSays/SimonSays.module.css
.green {
  background-color: green;
}

.yellow {
  background-color: yellow;
}

.red {
  background-color: red;
}

.blue {
  background-color: blue;
}

.blue,
.red,
.green,
.yellow {
  width: 200px;
  height: 200px;
}

.main {
  text-align: center;
  width: 85%;
  margin: auto;
}

.container {
  display: block;
  width: 100%;
  margin: auto;
}

.btn {
  margin: 25px;
  display: inline-block;
  height: 200px;
  width: 200px;
  border: 10px solid black;
  border-radius: 20%;
}

.gameOver {
  background-color: red;
  opacity: 0.8;
}

.pressed {
  box-shadow: 0 0 20px white;
  background-color: grey;
}

.playButton {
  visibility: visible;
  background-color: #fef2bf;
  color: black;
  width: 100px;
  height: 50px;
  margin-bottom: 5rem;
}

.wrong {
  background-color: red;
}

.success {
  background-color: green;
}

.hide {
  visibility: hidden;
}

.rowClass {
  width: 100%;
}

@media screen and (max-width: 500px) {
  .btn {
    height: 200px;
    width: 200px;
  }
}

@media screen and (min-width: 1000px) {
  .btn {
    height: 350px;
    width: 350px;
  }
}

